--- a/conf/openimis.conf
+++ b/conf/openimis.conf
@@ -1,5 +1,49 @@
 
 server {
+
+
+# ******************************  begin gzip section ********************
+# Compression  https://serverfault.com/questions/730883/nginx-reverse-proxy-gzip-to-client
+gzip on;     # Enable Gzip compressed.
+
+# Enable compression both for HTTP/1.0 and HTTP/1.1.
+gzip_http_version  1.1;
+
+# Compression level (1-9).
+# 5 is a perfect compromise between size and cpu usage, offering about
+# 75% reduction for most ascii files (almost identical to level 9).
+gzip_comp_level    5;
+
+# Don't compress anything that's already small and unlikely to shrink much
+# if at all (the default is 20 bytes, which is bad as that usually leads to
+# larger files after gzipping).
+gzip_min_length    1000;
+
+# Compress data even for clients that are connecting to us via proxies,
+# identified by the "Via" header (required for CloudFront).
+gzip_proxied       any;
+
+# Tell proxies to cache both the gzipped and regular version of a resource
+# whenever the client's Accept-Encoding capabilities header varies;
+# Avoids the issue where a non-gzip capable client (which is extremely rare
+# today) would display gibberish if their proxy gave them the gzipped version.
+gzip_vary          on;
+
+# Compress all output labeled with one of the following MIME-types.
+# text/html is always compressed by HttpGzipModule
+gzip_types
+    text/css
+    text/*
+    text/javascript
+    message/*
+    application/x-javascript
+    application/json
+    application/xml
+    application/atom+xml
+    application/xaml+xml;
+# ******************************  end gzip section ********************
+
+
     resolver 127.0.0.11 valid=30s;
     
 
